<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="fill_parent" android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_marginStart="10dp" android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp" android:layout_marginRight="10dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="12dp">

            <LinearLayout
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/txt_about_icon"
                    android:layout_width="48dp" android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txt_about_name"
                    android:layout_height="wrap_content" android:layout_width="wrap_content"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:text="@string/app_name"
                    android:gravity="center" android:textSize="24dp" android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <TextView
                android:id="@+id/header_help"
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:text="@string/action_help" android:textSize="16sp" android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_help_general"
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_marginBottom="4dp"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:text="@string/help_general" android:textSize="12sp" />

            <Button android:id="@+id/btn_worldmap"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center" android:layout_margin="8dp"
                android:text="@string/action_worldmap" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp" android:background="?attr/colorAccent" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/header_about"
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:text="@string/action_about" android:textSize="16sp" android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_about_desc"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="12sp" android:text="@string/app_desc" />

            <TextView
                android:id="@+id/txt_about_version"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="start"
                android:text="@string/about_app_version_field" android:textSize="12sp"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:id="@+id/txt_about_support"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:textSize="12sp"
                android:text="@string/about_app_support_field" />

            <TextView
                android:id="@+id/txt_help_url"
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="0dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:textSize="12sp"
                android:text="@string/help_url"
                android:autoLink="web" />


            <TextView
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="2dp"
                android:id="@+id/txt_about_legal1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:textSize="12sp"
                android:text="@string/about_app_sourcecode_field"
                android:autoLink="web" />

            <TextView
                android:id="@+id/txt_about_url"
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="0dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:textSize="12sp"
                android:text="@string/help_source_url"
                android:autoLink="web" />

            <TextView
                android:id="@+id/txt_about_media"
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp" android:layout_marginBottom="2dp"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:text="@string/about_media_field" android:textSize="12sp"
                android:autoLink="web" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp" android:background="?attr/colorAccent" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/header_manifest"
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:text="@string/action_manifest" android:textSize="16sp" android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_about_manifest"
                android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                tools:text="file manifest" android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>